# ai-data-scientist

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  benchmark_orchestrator.py  experiment_import.py  general-overview-20260401-081508.md  implementation-plan.md  pyproject.toml  refactor.md  run_benchmark.py  scoring_plan.md
.claude/: settings.json  settings.local.json
.claude/hooks/: trace.sh
ai_data_scientist/: __init__.py
ai_data_scientist/cli/: benchmark.py  experiment_import.py
ai_data_scientist/experiments/: __init__.py  export.py  ids.py  importer.py  store.py
ai_data_scientist/orchestration/: __init__.py  config.py  models.py  outputs.py  prompts.py  runner.py  trace.py  workspace.py
datasets/: __init__.py  generator.py  registry.py
datasets/contracts/: anscombes_quartet.yaml  class_imbalance.yaml  concept_drift.yaml  deterministic_linear.yaml  heteroscedasticity.yaml  high_dim_sparse.yaml  interaction_effects.yaml  lognormal_skew.yaml  mnar.yaml  multicollinearity.yaml  multimodal.yaml  outlier_dominated.yaml  overlapping_clusters.yaml  pure_noise.yaml  quadratic.yaml  simpsons_paradox.yaml  spurious_correlation.yaml  survival_censored.yaml  time_series_seasonality.yaml  well_separated_clusters.yaml
docs/: README.md  architecture.md
docs/artifacts/: experiment-3-visual-pilot-synthesis-20260404.md  experiment-redesign-schema-20260401-081508.md  general-overview-20260401-081508.md  multimodal-case-note-20260401-081508.md  v2-prompt-overview-20260404.md
docs/plans/: scoring_plan.md
frontend/: app.js  experiment-api.js  experiment-api.test.js  index.html  package-lock.json  package.json  serve.py  styles.css  vite-plugin-manifest.js  vite.config.js
frontend/src/: App.svelte  global.css  main.js
harness/: README.md  prompt_template.txt  run_claude.sh  run_codex.sh
prompts/: analyst-v2.md  visual-review.md
results/: benchmark_report.md
results/configs/: claude-v3.yaml  codex-v2.yaml  codex-v3.yaml  solo-baseline.yaml  solo-codex.yaml  solo-v2.yaml
results/experiments/: catalog.sqlite  index.json
reviewer/: __init__.py  report.py  rubric.py  scorer.py
tests/: test_benchmark_orchestrator.py  test_experiment_import.py  test_generators.py  test_registry.py  test_report.py  test_rubric.py  test_run_benchmark.py  test_scorer.py
(+468 files in other folders)
