[project]
name = "ai-data-scientist"
version = "0.1.0"
description = "Benchmark harness comparing Claude Code and Codex CLI as autonomous data scientists"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "anthropic>=0.39",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
