[project]
name = "ai-data-scientist"
version = "0.1.0"
description = "Benchmark harness comparing Claude Code and Codex CLI as autonomous data scientists"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pandas-stubs>=2.3",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.12",
    "types-PyYAML>=6.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
